# robotics_exp

./: .gitignore  Dockerfile
ros2_ws/src/mentorpi_description/: CMakeLists.txt  package.xml
ros2_ws/src/mentorpi_description/launch/: description.launch.py  view.launch.py
ros2_ws/src/mentorpi_description/rviz/: mentorpi.rviz
ros2_ws/src/mentorpi_description/urdf/: ack.xacro  mentorpi.xacro
ros2_ws/src/mentorpi_sim_gazebo/: CMakeLists.txt  package.xml
ros2_ws/src/mentorpi_sim_gazebo/config/: nav2_params.yaml  ros_gz_bridge.yaml  slam_toolbox_online_async.yaml
ros2_ws/src/mentorpi_sim_gazebo/launch/: nav2.launch.py  rviz.launch.py  slam.launch.py  spawn.launch.py
ros2_ws/src/mentorpi_sim_gazebo/urdf/: mentorpi_a1_model.xacro  mentorpi_gz.xacro
ros2_ws/src/mentorpi_sim_gazebo/worlds/: empty.world
