<?xml version="1.0"?>
<package format="3">
  <name>mentorpi_sim_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo simulation</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>mentorpi_description</exec_depend>
  <exec_depend>mentorpi_safety</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
